# JEC

./: .gitignore  README.md  TODO.md  configure.ac
scripts/: bootstrap  build  check
src/: Makefile.am  test.c
src/io/: Makefile.am  io.c  io.h  io_file.c  io_file.h  io_file_tests.c  io_string.c  io_string.h  io_string_tests.c  io_tests.c
src/jec/: defs.h
src/lx/: Makefile.am  lexer.h  lexer_api.c  lexer_api.h  lexer_tests.c  tokens.c  tokens.h  tokens_tests.c
src/symtab/: Makefile.am  symtab.c  symtab.h  symtab_tests.c
