noinst_LIBRARIES = libjec_io.a libjec_io_tests.a

headers = \
    io_string.h \
    io_file.h \
    io.h

sources = \
    io_string.c \
    io_file.c \
    io.c

tests = \
    io_string_tests.c \
    io_file_tests.c \
    io_tests.c

libjec_io_a_SOURCES = $(headers) $(sources)
libjec_io_tests_a_SOURCES = $(headers) $(tests)
