noinst_LIBRARIES = libjec_lx.a libjec_lx_tests.a

headers = \
    lexer.h \
    lexer_api.h \
    tokens.h

sources = \
    lexer.c \
    lexer_api.c \
    tokens.c

tests = \
    lexer_tests.c \
    tokens_tests.c

libjec_lx_a_SOURCES = $(headers) $(sources)
libjec_lx_tests_a_SOURCES = $(headers) $(tests)
